# coursework-beard_software

./: .gitignore  README.md  chel  dfdfd  garwg3qgq34gq34g  main.html  style.css
API_cpp_py/: README.md
API_cpp_py/src/cpp/: CMakeLists.txt  ciphers1.cpp  ciphers1.hpp  ciphers2.cpp  ciphers2.hpp  main.cpp
API_cpp_py/src/cpp/cipher_example_dll/: CMakeLists.txt  main_cipher_file.cpp
API_cpp_py/src/cpp/cipher_example_dll/cipher_first/: CMakeLists.txt  HPC-cipher.cpp  HPC-cipher.hpp
API_cpp_py/src/py/: main.py
API_cpp_py/src/py/ciphers_api_module/: ciphers_api_module.py
API_cpp_py/src/py/include_ciphers/: HPC_cipher.pyd
API_cpp_py/src/py/module/: CCiphers_module.py
API_cpp_py/src/py/telegrams_sliser/: telegrams_slicer_module.pyd
Matrix/: CMakeLists.txt  README.md
Matrix/src/: Matrix.cpp  Matrix.hpp  main.cpp
Permutation/: CMakeLists.txt  README.md
Permutation/src/: Permutation.cpp  Permutation.hpp  main.cpp
Telegrams/: CMakeLists.txt  README.md  function.cpp
Telegrams/src/: inputTxt.txt  main.cpp
file_converters/: docxToTxt.py  txtToDocx.py
tools/: configuration_cpp_project.bat
